poke/testsuite/poke.pkl/cast-struct-diag-2.pk
/* { dg-do compile } */

deftype Struct = struct {};

defvar x = Struct {} as int<32>; /* { dg-error "expected struct" } */
